# graphrag-legalcases-postgres

./: .env.sample  .gitignore  .gitmodules  Dockerfile.u22  README.md  README_ja.md  azure.yaml  docker-compose.yaml  init-postgres.sh  next-steps.md  next-steps_ja.md  notebook.ipynb  notebook_graphrag_lib.ipynb  pyproject.toml  requirements-dev.txt  thunder-collection_Azure OpenAI.json:Zone.Identifier
.devcontainer/: devcontainer.json
Data_ingestion/: backend.ipynb  data_ingest.ipynb  embedding.sql  embedding_job.sql  pyproject.toml  run_headless_data_ingest.py  test.ipynb  test_vector_search.sql
demo/: graph-query.sql  graphrag_query.sql  semantic-ranker.sql  vector-search.sql
infra/: main.bicep  main.parameters.json  web.bicep
playground/: .env  case_graph.sql  case_playground_graph.ipynb  case_playground_graph.py  graph_prompt.ipynb  graph_prompt_v2.ipynb  graph_query_v2.sql  mluk_full_graph.py  mluk_graph.ipynb  notes.md  pg2_case_graph.ipynb  playground.sql  playground_case_graph_rag.sql  pyproject.toml  reranker.sql
playground/saved_responses/: vector_semantic_graph_rrf.md  vector_semantic_rrf_with_graph.md
sample_qa_data/: chatgpt_3_5_results_w_reranker.json  chatgpt_4_results_simple.json  chatgpt_4_results_w_reranker.json  draft_data.ipynb  lc_backend.ipynb
sample_qa_data/sample_question_1/: chatgpt_4_results_simple_1.json  chatgpt_4_results_w_graph_2.json  chatgpt_4_results_w_reranker_Water leaking into the apartment from the floor above. What are the prominent legal precedents in Washington on this problem?.json  graph_context_results_Water leaking into the apartment from the floor above. What are the prominent legal precedents from cases in Washington on this problem?.json  initial_context_results_Water leaking into the apartment from the floor above. What are the prominent legal precedents from cases in Washington on this problem?.json  initial_context_results_Water leaking into the apartment from the floor above. What are the prominent legal precedents in Washington on this problem?.json  reranker_context_results_6.json
sample_qa_data/sample_question_2/: chatgpt_4_results_w_reranker_2.json  initial_context_results_3.json  reranker_context_results__4.json
scripts/: load_python_env.sh  setup_postgres_database.ps1  setup_postgres_database.sh  setup_postgres_seeddata.ps1  setup_postgres_seeddata.sh
src/backend/: Dockerfile  pyproject.toml
src/backend/fastapi_app/: api_models.py  dependencies.py  get_token.py  openai_clients.py  postgres_models.py  postgres_searcher.py  postgres_token.txt  rag_advanced.py  rag_base.py  rag_simple.py  setup_postgres_age.py  setup_postgres_azurerole.py  setup_postgres_db_age_ingest.py  setup_postgres_db_new.py  setup_postgres_legal_database.py  setup_postgres_legal_seeddata.py  setup_postgres_legal_seeddata_msrgraphrag.py  test.py  update_embeddings.py
src/backend/fastapi_app/prompts/: answer.txt  query_rewrite.txt
src/backend/fastapi_app/routes/: Original api_routes copy.py  api_routes.py
src/backend/static/: index.html
src/backend/static/assets/: NoPage-21ea635d.js  NoPage-42b78e1a.js  NoPage-42b78e1a.js.map  fluentui-icons-1763cc1b.js  fluentui-icons-1763cc1b.js.map  fluentui-icons-2d7a34ad.js  fluentui-icons-58716126.js  fluentui-icons-58716126.js.map  fluentui-react-1d44cebd.js  fluentui-react-1d44cebd.js.map  fluentui-react-7e1805fb.js  fluentui-react-7e1805fb.js.map  fluentui-react-d0f3c5f2.js  index-0320d7ff.css  index-206aa545.js  index-206aa545.js.map  index-286963bf.js  index-286963bf.js.map  index-49deb22e.js  index-49deb22e.js.map  index-73b31a0a.css  index-8c85de0e.js  index-d2cf0e16.css  vendor-c238243a.js  vendor-c238243a.js.map  vendor-fe5d2978.js
src/frontend/: index.html  (+3 more)
(+26 files in other folders)
